fix page zooming stretching demo buttons

--- a/addon/styles/components/ui-demo.scss
+++ b/addon/styles/components/ui-demo.scss
@@ -1,6 +1,7 @@
 @component {
   &--modifiers {
     display: flex;
+    align-items: center;
     margin-bottom: 1em;
   }
 
